<resources>
    <string name="app_name">CovidToday</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ca">Canada</string>
    <string name="us">United State</string>
    <string name="ON">Ontario</string>
    <string name="change">Change</string>
    <string name="covid_info">Covid Info</string>
    <string name="vaccine_info">Vaccine Info</string>
    <string name="covid_news">COVID-NEWS</string>
    <!-- Content Description -->
    <string name="news_image_desc">News Image</string>
    <string name="news_image">news image</string>
    <string name="str_test_date">22/02/2022</string>
    <string name="vaccinated">Vaccinated:</string>
    <string name="unknown">unknown</string>
    <string name="fully_vaccinated">Fully Vaccinated:</string>
    <string name="partially_vaccinated">Partially Vaccinated:</string>
    <string name="vaccine_statistic_country">Vaccine statistic (Country)</string>
    <string name="administered">Administered</string>
    <string name="covid_statistic">Covid statistic</string>
    <string name="statistic_by_location">Statistic by location</string>
    <string name="nearby_vaccine_locations">Nearby Vaccine Locations</string>
    <string name="loading_maps">Loading Maps</string>
    <string name="share">share</string>
</resources>