<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:id="@+id/location_text_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location_country_text"
                style="@style/BoldTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ca"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/location_province_text"
                style="@style/BoldContentTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ON"
                android:textColor="@color/black" />

        </LinearLayout>

        <Button
            android:id="@+id/location_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/location_text_root"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="1dp"
            android:text="@string/change"
            android:textColor="@color/white" />

    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_pager_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/covid_info"
            android:icon="@drawable/ic_covid"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vaccine_info"
            android:icon="@drawable/ic_vaccine"
            />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/main_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.viewpager2.widget.ViewPager2>

</LinearLayout>